# packaging_testing

./: CMakeLists.txt  MyApp.dmg  conanfile.txt
packaging/: osx_dmg_settings.py
src/: CMakeLists.txt  main.cpp
